# RobotSoftwarePracticals_Projects

lab1/: LABGROUP.md  README.md
lab1/e1/: mycp.sh
lab1/e2/: mygrepcp.sh
lab1/e2/d1/: f2.txt
lab1/e3/: info.txt  info2.txt  info3.txt  mydf.sh
lab1/e4/: killme.sh
lab1/e5/: readnews.sh
lab2/: CMakeLists.txt  FieldPrinter.cpp  FieldPrinter.h  README.md  Robot.cpp  Robot.h  game.cpp  game_static_robots.cpp  halfway_checkpoint.cpp  init_robots.cpp  init_robots_with_grid.cpp  robot_logic.cpp  robot_logic.h
lab3/: .gitlab-ci.yml  README.md
lab3/simple_control/: CMakeLists.txt  package.xml
lab3/simple_control/include/: controls.h
lab3/simple_control/launch/: play.launch  record.launch  simple_control.launch
lab3/simple_control/rosbag/: .gitignore
lab3/simple_control/src/: controls.cpp  simple_control_node.cpp
